# backend-internship-task

./: .dockerignore  .editorconfig  .env.example  .env.sample  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  APIDocumention.md  Backend Internship Task.postman_collection.json  Comment.md  Dockerfile  Makefile  README.md  SUBMISSION.md  Submission.md  alembic.ini  api.py  app.py  auth.py  build.sh  calories.db  calories.py  config.py  create_table.py  create_tables.py  database.py  db.sqlite3  docker-compose.yaml  docker-compose.yml  generate_db.py  main.py  manage.py  models.py  mydb.sql  progress.md  pyproject.toml  requirement.txt  requirements.txt  run.py  (+9 more)
CalorieHD/: asgi.py  settings.py  urls.py  wsgi.py
DiveCalorieTracker/: asgi.py  settings.py  urls.py  wsgi.py
alembic/: env.py
api/: __init__.py  database.db  utils.py
api_project/: __init__.py  conftest.py
app/: permissions.py  settings.py  urls.py
authen/: admin.py  apps.py  env.py  filters.py  forms.py  groups.py  manager.py  models.py  pagenation.py  serializer.py  test_umanager.py  tests.py  urls.py  views.py
backend/: .env.example  constants.py  environment.py  exceptions.py  settings.py  urls.py  wsgi.py
calori/: admin.py  apps.py  models.py  test_viewp.py  tests.py  urls.py  views.py
calorie_tracker/: .env.example  conftest.py  db.sqlite3  manage.py  pytest.ini  submission.md
calories/: admin.py  apps.py  models.py  nutritionix.py  serializers.py  urls.py  views.py
caloriesapi/: manage.py
calory_limit/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: api_router.py  urls.py  wsgi.py
core/: configvars.py  exceptions.py
db/: database.py  models.py
dive/: asgi.py  settings.py  urls.py  wsgi.py
entries/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
env1/: pyvenv.cfg
flask_crud/: __init__.py  config.py
instance/: calories.db
meal/: apps.py
requirements/: base.txt  local.txt  production.txt
routes/: admin.py  admin_calorie.py  admin_user.py  auth.py  calories.py  (+1 more)
(+253 files in other folders)
