[tool.poetry]
name = "dive-backend-internship-task"
version = "0.1.0"
description = ""
authors = ["Emmanuel Tiboah <etiboah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.11.1"
anyio = "3.7.0"
bcrypt = "4.0.1"
certifi = "2023.5.7"
cffi = "1.15.1"
click = "8.1.3"
cryptography = "41.0.1"
dnspython = "2.3.0"
ecdsa = "0.18.0"
email-validator = "2.0.0.post2"
exceptiongroup = "1.1.1"
fastapi = "0.96.1"
greenlet = "2.0.2"
h11 = "0.14.0"
httpcore = "0.17.2"
httptools = "0.5.0"
httpx = "0.24.1"
idna = "3.4"
iniconfig = "2.0.0"
install = "1.3.5"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
mako = "1.2.4"
markupsafe = "2.1.3"
orjson = "3.9.1"
packaging = "23.1"
passlib = "1.7.4"
pluggy = "1.0.0"
pyasn1 = "0.5.0"
pycparser = "2.21"
pydantic = "1.10.9"
pytest = "7.3.2"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pyyaml = "6.0"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.16"
starlette = "0.27.0"
tomli = "2.0.1"
typing-extensions = "4.6.3"
ujson = "5.7.0"
uvicorn = "0.22.0"
uvloop = "0.17.0"
watchfiles = "0.19.0"
websockets = "11.0.3"
black = "^23.3.0"


[tool.black]
line-length = 88
target-version = ['py38', 'py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
